# nya-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
extensions/: zip_resources_provider.cpp  zip_resources_provider.h
formats/: dds.cpp  dds.h  ktx.cpp  ktx.h  math_expr_parser.cpp  math_expr_parser.h  nms.cpp  nms.h  string_convert.cpp  string_convert.h  text_parser.cpp  text_parser.h  tga.cpp  tga.h
log/: android_log.cpp  android_log.h  composite_log.cpp  composite_log.h  html_log.cpp  html_log.h  log.cpp  log.h  output_stream.cpp  output_stream.h  plain_file_log.cpp  plain_file_log.h  stdout_log.cpp  stdout_log.h  warning.cpp  warning.h
math/: bezier.cpp  bezier.h  constants.cpp  constants.h  frustrum.cpp  frustrum.h  frustum.cpp  frustum.h  matrix.cpp  matrix.h  quadtree.cpp  quadtree.h  quaternion.cpp  quaternion.h  scalar.h  vector.h
memory/: indexed_map.h  invalid_object.h  lru.h  memory.cpp  memory.h  memory_mapper.h  memory_reader.h  memory_writer.h  optional.h  pool.h  shared_ptr.h  tag_list.h  tmp_buffer.cpp  tmp_buffer.h
render/: animation.cpp  animation.h  debug_draw.cpp  debug_draw.h  fbo.cpp  fbo.h  platform_specific_gl.cpp  platform_specific_gl.h  render.cpp  render.h  render_objects.h  screen_quad.h  shader.cpp  shader.h  shader_code_parser.cpp  shader_code_parser.h  skeleton.cpp  skeleton.h  statistics.cpp  statistics.h  texture.cpp  texture.h  transform.cpp  transform.h  vbo.cpp  vbo.h
resources/: composite_resources_provider.cpp  composite_resources_provider.h  file_resources_provider.cpp  file_resources_provider.h  resources.cpp  resources.h  shared_animations.cpp  shared_animations.h  shared_resources.h  shared_textures.cpp  shared_textures.h  shared_textures.mm
scene/: animation.cpp  animation.h  (+19 more)
(+119 files in other folders)
